Fix tooltips for groups & subgroups, add z-index for 3D Canvas

--- a/less/tah-docked.less
+++ b/less/tah-docked.less
@@ -1,7 +1,7 @@
 #token-action-hud-app {
   height: min-content;
   margin: @tah-hud-margin;
-  z-index: 30;
+  z-index: 20;
 
   &.tah-expanded {
     #token-action-hud {
