--- a/less/tah-hud.less
+++ b/less/tah-hud.less
@@ -1,5 +1,6 @@
 #token-action-hud-app {
   position: fixed;
+  z-index: 20;
 
   #token-action-hud {
     border-radius: var(--tah-border-radius);
